--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>spring-social-base</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -48,6 +48,6 @@
 		<connection>scm:git:https://github.com/zwzwzw/spring-social-base.git</connection>
 		<developerConnection>scm:git:https://github.com/zwzwzw/spring-social-base.git</developerConnection>
 		<url>https://github.com/zwzwzw/spring-social-base</url>
-		<tag>1.0.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 </project>
